# librespot-mpris-proxy

./: Makefile  README.md  librespot-events.py  librespot-mpris-proxy-policy.conf  librespot-mpris-proxy.py  librespot-mpris-proxy.service  librespot-onevent.py  librespot_mpris_proxy.py  pyproject.toml
